versioned_docs/version-2.16/reference/subsystems/spectral.mdx
---
title: spectral
description: |
  A flexible JSON/YAML linter for creating automated style guides (https://github.com/stoplightio/spectral).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A flexible JSON/YAML linter for creating automated style guides (https://github.com/stoplightio/spectral).

Backend: <span className="color--primary">`pants.backend.experimental.openapi.lint.spectral`</span>

Config section: <span className="color--primary">`[spectral]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--spectral-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_SPECTRAL_ARGS'
  toml_repr={`[spectral]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Spectral, e.g. `--spectral-args='--fail-severity=warn'`.

</Option>

### `skip`

<Option
  cli_repr={`--[no-]spectral-skip`}
  env_repr='PANTS_SPECTRAL_SKIP'
  toml_repr={`[spectral]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Spectral when running `pants lint`.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--spectral-version=<str>`}
  env_repr='PANTS_SPECTRAL_VERSION'
  toml_repr={`[spectral]
version = <str>`}
  default_repr={`@stoplight/spectral-cli@6.5.1`}
>

Version string for the tool in the form package@version (e.g. prettier@2.6.2)

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
