versioned_docs/version-2.18/reference/subsystems/spectral.mdx
---
title: spectral
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A flexible JSON/YAML linter for creating automated style guides (https://github.com/stoplightio/spectral).

Backend: <span className="color--primary">`pants.backend.experimental.openapi.lint.spectral`</span>

Config section: <span className="color--primary">`[spectral]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]spectral-skip`}
  env_repr='PANTS_SPECTRAL_SKIP'
  toml_repr={`[spectral]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Spectral when running `scie-pants-linux-x86_64 lint`.

</Option>

### `args`

<Option
  cli_repr={`--spectral-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_SPECTRAL_ARGS'
  toml_repr={`[spectral]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Spectral, e.g. `--spectral-args='--fail-severity=warn'`.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--spectral-version=<str>`}
  env_repr='PANTS_SPECTRAL_VERSION'
  toml_repr={`[spectral]
version = <str>`}
  default_repr={`@stoplight/spectral-cli@6.5.1`}
>

Version string for the tool in the form package@version (e.g. prettier@2.6.2)

</Option>

### `install_from_resolve`

<Option
  cli_repr={`--spectral-install-from-resolve=<str>`}
  env_repr='PANTS_SPECTRAL_INSTALL_FROM_RESOLVE'
  toml_repr={`[spectral]
install_from_resolve = <str>`}
  default_repr={`None`}
>

If specified, install the tool using the lockfile for this named resolve, instead of the version configured in this subsystem.

If unspecified, the tool will use the default configured package manager [nodejs].package_manager`, and install the tool without a lockfile.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
